## Cargo.toml, Jul/2022, Savio Sena <savio.sena@gmail.com>

[package]
name = "rusty"
version = "0.1.4"
edition = "2021"
description = "A collection of code snippets and examples inspired by the Rust Programming Language book."
repository = "git@github.com:sav/rusty.git"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sav/rusty"
keywords = ["learning", "snippets", "random"]
publish = false

[lib]
name = "minigrep"
path = "src/lib/minigrep.rs"

[profile.release]
## abort on panic instead of unwinding the stack.
panic = 'abort'
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[dependencies]
rand = "0.8.5"
cargo-modules = "0.5.9"
unicode-segmentation = "1.7.1"
rust-analyzer = "0.0.1"

[dev-dependencies]
env_logger = "0.5"
